# agentlibrary

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_hle_tasks.py  run_task 2.sh
agents/: biographicaldataanalyzer.json  brand_strategy_specialist.json  conservation_expert_advisor.json  conservationexpert_advisor.json  creative_writer.json  creative_writer_procedural.json  data_analyst.json  data_analyst_agent.json  dataanalyst.json  dataanalyzer.json  dataresearcher.json  emotional_support_advisor.json  factverifier.json  financial_analyst.json  information_researcher.json  informationresearcher.json  legal_consultant.json  literary_and_media_analyst.json  market_research_analyst.json  media_historian.json  nutritional_expert.json  report_writer.json  research_agent.json  softwaredebugging_specialist.json  supply_chain_coordinator.json  technical_explanation_writer.json  test1234.json  writer_agent.json
agents/episodic/: conservation_expert_advisor_episodic.json  conservationexpert_advisor_episodic.json  data_analyst_episodic.json  dataanalyst_episodic.json  factverifier_episodic.json  information_researcher_episodic.json  informationresearcher_episodic.json  report_writer_episodic.json  softwaredebugging_specialist_episodic.json  technical_explanation_writer_episodic.json  (+1 more)
src/: context_manager.py  decomposition.py  execution.py  judged_hle_agentlibrary-4-1.json.json  judged_hle_agentlibrary.json.json  main.py  matrix_operations.py  orchestrator.py  planning.py  results_eval.py  run_hle_tasks.py  run_travel_planner.py  sub_agent_creation.py
(+29 files in other folders)
