[project]
name = "agentlibrary"
version = "0.1.0"
description = "Dynamic sub-agent creation and orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use==0.1.40",
    "docker>=7.1.0",
    "exa-py>=1.12.1",
    "mdformat>=0.7.22",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "openai>=1.72.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "types-tqdm>=4.67.0.20250404",
]

[tool.mypy]
strict = false
follow_imports = "silent"
ignore_missing_imports = true
disable_error_code = ["misc", "union-attr"]

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true
